--- a/sample-first-app/Base.lproj/Main.storyboard
+++ b/sample-first-app/Base.lproj/Main.storyboard
@@ -72,6 +72,9 @@
                                                 <exclude reference="ups-hf-2Sf"/>
                                             </mask>
                                         </variation>
+                                        <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                            <rect key="frame" x="45" y="295" width="254" height="50"/>
+                                        </variation>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -94,10 +97,13 @@
                                         <exclude reference="NMc-nF-OqN"/>
                                     </mask>
                                 </variation>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="28" y="72" width="344" height="345"/>
+                                </variation>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" keyboardDismissMode="onDrag" text="聆听你的美食感受" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="B4I-KH-pWf">
                                 <rect key="frame" x="173" y="425" width="255" height="44"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="PRf-6F-Bvs"/>
                                     <constraint firstAttribute="width" constant="255" id="VEj-sG-OG0"/>
@@ -109,6 +115,9 @@
                                     <mask key="constraints">
                                         <exclude reference="fVn-9Z-i9C"/>
                                     </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="73" y="425" width="255" height="44"/>
                                 </variation>
                             </textView>
                         </subviews>
@@ -317,9 +326,26 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6EE-Zk-EVM">
-                                <rect key="frame" x="0.0" y="369" width="600" height="40"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mAw-mx-xWR" customClass="RatingView" customModule="sample_first_app" customModuleProvider="target">
+                                <rect key="frame" x="330" y="309" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="AiJ-XK-EGh"/>
+                                    <constraint firstAttribute="height" constant="35" id="KHe-fE-t1q"/>
+                                    <constraint firstAttribute="height" constant="35" id="giB-Hi-qqW"/>
+                                    <constraint firstAttribute="width" constant="250" id="yha-uL-Aj9"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="AiJ-XK-EGh"/>
+                                        <exclude reference="KHe-fE-t1q"/>
+                                        <exclude reference="giB-Hi-qqW"/>
+                                        <exclude reference="yha-uL-Aj9"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6EE-Zk-EVM">
+                                <rect key="frame" x="0.0" y="304" width="600" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="6qw-bd-RVn"/>
                                     <constraint firstAttribute="height" constant="40" id="LH6-Bg-Fgo"/>
@@ -349,25 +375,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mAw-mx-xWR" customClass="RatingView" customModule="sample_first_app" customModuleProvider="target">
-                                <rect key="frame" x="337" y="379" width="250" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="AiJ-XK-EGh"/>
-                                    <constraint firstAttribute="height" constant="35" id="KHe-fE-t1q"/>
-                                    <constraint firstAttribute="height" constant="35" id="giB-Hi-qqW"/>
-                                    <constraint firstAttribute="width" constant="250" id="yha-uL-Aj9"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="AiJ-XK-EGh"/>
-                                        <exclude reference="KHe-fE-t1q"/>
-                                        <exclude reference="giB-Hi-qqW"/>
-                                        <exclude reference="yha-uL-Aj9"/>
-                                    </mask>
-                                </variation>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Contant is   " textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CAb-9m-Mig">
-                                <rect key="frame" x="0.0" y="417" width="600" height="120"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contant is   " textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CAb-9m-Mig">
+                                <rect key="frame" x="0.0" y="347" width="600" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="215" id="cTc-T7-Yts"/>
                                     <constraint firstAttribute="height" constant="215" id="dSU-YS-8yY"/>
@@ -378,7 +387,7 @@
                                     <constraint firstAttribute="height" constant="215" id="ru4-1i-dWq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -453,6 +462,7 @@
                             <constraint firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="TZW-Wc-49J"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="bottom" secondItem="TwG-tN-NqG" secondAttribute="bottom" id="UEE-JB-39W"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="6EE-Zk-EVM" secondAttribute="bottom" constant="16" id="UR8-6M-E44"/>
+                            <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="Msu-Ml-DXW" secondAttribute="bottom" constant="240" id="V0q-fi-LR2"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="Msu-Ml-DXW" secondAttribute="bottom" constant="239" id="VN2-9J-P12"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="6EE-Zk-EVM" secondAttribute="bottom" constant="3" id="Ve5-ka-H90"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="Msu-Ml-DXW" secondAttribute="bottom" constant="239" id="VvW-sc-W4L"/>
@@ -471,12 +481,14 @@
                             <constraint firstItem="crz-Uf-zsO" firstAttribute="top" secondItem="CAb-9m-Mig" secondAttribute="bottom" id="asX-cc-D1j"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="mAw-mx-xWR" secondAttribute="bottom" constant="6" id="cIL-97-juh"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="cOf-1C-0xp"/>
+                            <constraint firstItem="mAw-mx-xWR" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" constant="230" id="cfO-xK-hb0"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="centerX" secondItem="mmH-6Y-T5u" secondAttribute="centerX" id="dBk-5G-Ki2"/>
                             <constraint firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="dv3-V9-PPh"/>
                             <constraint firstItem="crz-Uf-zsO" firstAttribute="top" secondItem="CAb-9m-Mig" secondAttribute="bottom" id="eFI-88-fuR"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" id="eoi-1A-6ul"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="mAw-mx-xWR" secondAttribute="bottom" constant="6" id="fG7-af-rqz"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" id="gYB-1n-lTG"/>
+                            <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="6EE-Zk-EVM" secondAttribute="bottom" constant="3" id="gx4-dW-zjZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6EE-Zk-EVM" secondAttribute="trailing" constant="-20" id="hv0-S9-BzZ"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" constant="50" id="hxN-c2-Q4K"/>
                             <constraint firstItem="CAb-9m-Mig" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leadingMargin" constant="-20" id="hxR-5H-O85"/>
@@ -484,13 +496,17 @@
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" id="iMq-zK-s1D"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" constant="8" id="igr-Oo-VNN"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" id="jJ0-ML-fiP"/>
+                            <constraint firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="jM1-1w-5VD"/>
+                            <constraint firstItem="CAb-9m-Mig" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" constant="3" id="jxX-Cy-K3J"/>
                             <constraint firstAttribute="trailing" secondItem="CAb-9m-Mig" secondAttribute="trailing" id="kKX-Si-sXG"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="centerY" secondItem="6EE-Zk-EVM" secondAttribute="centerY" id="kR5-Lm-avO"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" id="kpi-4Q-rk5"/>
+                            <constraint firstItem="6EE-Zk-EVM" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" id="krl-oK-P6d"/>
                             <constraint firstItem="6EE-Zk-EVM" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" id="lSg-gO-Bs3"/>
                             <constraint firstItem="TwG-tN-NqG" firstAttribute="leading" secondItem="mmH-6Y-T5u" secondAttribute="leading" id="m8j-Ak-ygG"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="mF8-BH-WZl"/>
                             <constraint firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="mvN-zQ-a0F"/>
+                            <constraint firstItem="6EE-Zk-EVM" firstAttribute="bottom" secondItem="TwG-tN-NqG" secondAttribute="bottom" priority="900" id="myV-cS-gLt"/>
                             <constraint firstAttribute="trailing" secondItem="CAb-9m-Mig" secondAttribute="trailing" id="nP0-Gt-O9P"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="top" secondItem="TwG-tN-NqG" secondAttribute="bottom" id="nQv-A7-ff3"/>
                             <constraint firstItem="mAw-mx-xWR" firstAttribute="trailing" secondItem="6EE-Zk-EVM" secondAttribute="trailing" id="nUS-Qf-Tf8"/>
@@ -525,12 +541,14 @@
                                 <exclude reference="1fp-b9-ehM"/>
                                 <exclude reference="9TF-9k-Mgr"/>
                                 <exclude reference="m8j-Ak-ygG"/>
+                                <exclude reference="2Oc-YR-f5j"/>
                                 <exclude reference="3cH-IL-pFS"/>
                                 <exclude reference="4bZ-0K-l0O"/>
                                 <exclude reference="5L5-lS-1vI"/>
                                 <exclude reference="69E-bO-ZB1"/>
                                 <exclude reference="6LB-Mn-2hU"/>
                                 <exclude reference="Cqo-YR-3K3"/>
+                                <exclude reference="EeY-UY-UQ5"/>
                                 <exclude reference="IZx-2I-g88"/>
                                 <exclude reference="IsV-rW-J9J"/>
                                 <exclude reference="K3z-LV-D2a"/>
@@ -540,7 +558,9 @@
                                 <exclude reference="NSe-Ax-yiZ"/>
                                 <exclude reference="RaR-f0-91R"/>
                                 <exclude reference="S8q-99-ZSL"/>
+                                <exclude reference="TZW-Wc-49J"/>
                                 <exclude reference="UEE-JB-39W"/>
+                                <exclude reference="V0q-fi-LR2"/>
                                 <exclude reference="VN2-9J-P12"/>
                                 <exclude reference="VvW-sc-W4L"/>
                                 <exclude reference="XjH-ek-Qa4"/>
@@ -557,9 +577,11 @@
                                 <exclude reference="kpi-4Q-rk5"/>
                                 <exclude reference="lSg-gO-Bs3"/>
                                 <exclude reference="mvN-zQ-a0F"/>
+                                <exclude reference="ndJ-YB-CGE"/>
                                 <exclude reference="pC4-o8-zgi"/>
                                 <exclude reference="pTD-OF-Z1j"/>
                                 <exclude reference="rVo-qu-DAE"/>
+                                <exclude reference="rf5-Vq-6Xs"/>
                                 <exclude reference="scr-Mb-giU"/>
                                 <exclude reference="u5w-q2-xoK"/>
                                 <exclude reference="vpo-OU-ZMJ"/>
